compiling_error.txt
/home/DirtbagDrew/Documents/Workspace/CECS326/CECS-326-programming-review/main.cpp: In function ‘void allocateMemory()’:
/home/DirtbagDrew/Documents/Workspace/CECS326/CECS-326-programming-review/main.cpp:23:24: error: ‘struct structures’ has no member named ‘charsallocated’; did you mean ‘charsAllocated’?
   int temp = structure.charsallocated[i];
                        ^~~~~~~~~~~~~~
                        charsAllocated
/home/DirtbagDrew/Documents/Workspace/CECS326/CECS-326-programming-review/main.cpp:23:39: error: ‘i’ was not declared in this scope
   int temp = structure.charsallocated[i];
                                       ^
/home/DirtbagDrew/Documents/Workspace/CECS326/CECS-326-programming-review/main.cpp:26:27: error: invalid conversion from ‘char*’ to ‘char’ [-fpermissive]
     *structure.ptrChar[i]=new char[temp];
                           ^~~~~~~~~~~~~~
